- Temporary fix for bug #27869 - George, you need to implement clone in order for "clone" and - compatibility mode to work.

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@156151 c90b9560-bf6c-de11-be94-00142212c4b1